--- a/css/styles5.css
+++ b/css/styles5.css
@@ -1,12 +1,3 @@
-.modal-header {
-  background-color: #512DA8;
-  color: floralwhite; }
-  .modal-header .close {
-    color: #9575CD; }
-
-.modal-content {
-  background-color: #D1C4E9; }
-
 .row-header {
   margin: 0px auto;
   padding: 0px 0px; }
@@ -56,8 +47,19 @@ body {
       left: 0;
       min-height: 300px; }
 
+.modal-content .modal-header {
+  background-color: #512DA8; }
+
+.modal-content .modal-title, .modal-content .close {
+  color: #fffaf0; }
+
+.modal-content .modal-body {
+  background-color: #D1C4E9; }
+
 #carouselButton {
-  right: 0px;
+  right: 15px;
   position: absolute;
-  bottom: 0px;
-  z-index: 1; }
+  bottom: 0px; }
+
+#loginModalOpen {
+  cursor: pointer; }
